[tool.poetry]
name = "echoprime"
version = "1.0.0"
description = "A Multi-Video View-Informed Vision-Language Model for Comprehensive Echocardiography Interpretation"
authors = ["EchoPrime Team"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Dependencies from requirements.txt with exact versions
ipywidgets = "8.1.2"
mysql-connector-python = "8.0.31"
opencv-python-headless = "4.5.5.64"
polars = "0.15.14"
pydicom = "2.3.1"
pytorch-lightning = "2.2.0.post0"
PyWavelets = ">=1.4.1"  # Using >= to allow newer compatible versions
wandb = "0.16.3"

# Additional dependencies used in the code but not in requirements.txt
torch = "*"
torchvision = "*"
numpy = "<2.0.0"  # Pin to NumPy 1.x for compatibility with opencv-python-headless
pandas = "*"
matplotlib = "*"
tqdm = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
